# clipgen-from-rag

./: .gitignore  README.md  pyproject.toml
src/model_snapshot/: model_snapshot.py
src/vision_rag_summarizer/: main.py
src/vision_rag_summarizer/modules/: blip_wrapper.py  ocr_extract.py  pdf_to_images.py  rag_store.py  slides_manifest.py  summary_to_video.py  text_llm_wrapper.py  video_generator.py
src/vision_rag_summarizer/modules/optional_wrappers/: LlavaWrapper_optional.py  bakllava_wrapper_optional.py  main_for_slides.py  video_generator_for_slides.py
src/vision_rag_summarizer/utils/: time_out.py
